--- a/templates/expertises/index.html.twig
+++ b/templates/expertises/index.html.twig
@@ -42,19 +42,19 @@
         <div class="row mt-4">
             <div class="col-md-4">
                 <a href="{{ path('app_demolition') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Démolition et curage" class="img-fluid">
+                    <img src="{{ asset('images/demolition.jpg') }}" alt="Démolition et curage" class="img-fluid">
                     <p>Démolition et curage</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="{{ path('app_maconnerie') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Maçonnerie" class="img-fluid">
+                    <img src="{{ asset('images/maconnerie.jpg') }}" alt="Maçonnerie" class="img-fluid">
                     <p>Maçonnerie</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="{{ path('app_revetements') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid">
+                    <img src="{{ asset('images/revetement.jpg') }}" alt="Sols et revêtements muraux" class="img-fluid">
                     <p>Sols et revêtements muraux</p>
                 </a>
             </div>
@@ -62,19 +62,19 @@
         <div class="row mt-4 justify-content-center deuxieme-partie">
         <div class="col-md-4">
                 <a href="{{ path('app_peinture') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="peinture" class="img-fluid">
+                    <img src="{{ asset('images/peinture.jpg') }}" alt="peinture" class="img-fluid">
                     <p>Peinture</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="{{ path('app_cloisons') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Cloisons mobiles et plafond" class="img-fluid">
+                    <img src="{{ asset('images/cloison.jpg') }}" alt="Cloisons mobiles et plafond" class="img-fluid">
                     <p>Cloisons mobiles et plafond</p>
                 </a>
             </div>
             <div class="col-md-4">
                 <a href="{{ path('app_isolation') }}">
-                    <img src="{{ asset('images/image1.jpg') }}" alt="Solutions acoustiques" class="img-fluid">
+                    <img src="{{ asset('images/isolation.jpg') }}" alt="Solutions acoustiques" class="img-fluid">
                     <p>Solutions acoustiques</p>
                 </a>
             </div>
