--- a/templates/user/request_facture.html.twig
+++ b/templates/user/request_facture.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="container my-5 back">
     <div class="card shadow-lg">
-        <div class="card-header bg-primary text-white text-center">
+        <div class="card-header  text-white text-center">
             <h2>Demander une facture</h2>
         </div>
         <div class="card-body">
@@ -31,4 +31,9 @@
         </div>
     </div>
 </div>
+<style>
+.card-header {
+        background-color: #1d4e89;
+    }
+</style>
 {% endblock %}
