--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -544,6 +544,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    height: 260px;
 }
 
 .technical-domains p {
@@ -1849,43 +1850,7 @@ iframe {
     margin: 0 auto;
 }
 
-/*calendrier*/
-/* .calendar-container {
-    margin: 20px;
-}
 
-#calendar-controls {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-th, td {
-    padding: 10px;
-    text-align: center;
-    border: 1px solid #ddd;
-}
-
-#calendar-body td {
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-#calendar-body td:hover {
-    background-color: #f0f0f0;
-}
-
-.rendezvous-form {
-    margin-top: 20px;
-}
-
-.rendezvous-form input {
-    margin: 5px 0;
-} */
 
 
 #calendar-controls {
